--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-md-6 d-flex align-items-center flex-column ">
                     
-                    <h5 id="time" class="animate__animated animate__fadeInDown animate__delay-1s"></h5>
+                    <h5 id="time"></h5>
                     <div class="w-100 mt-5 searchInput">
                         <input placeholder="Search City or Country" type="search" id="search" class="form-control w-100 mx-auto rounded-pill animate__animated animate__fadeIn animate__delay-2s">
                     </div>
