--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/style_index.css">
 </head>
 <body>
+    <div id="bodyImage"></div>
     <div class="overlay"></div>
     <section id="main" class="pt-4">
         <div class="container-fluid text-white ps-5 padding-0">
@@ -42,7 +43,7 @@
         </div>
        
         <div id="forecast">
-            <div class="container text-white mt-3 text-center  h-75">
+            <div class="container text-white mt-1 text-center  h-75">
                 <div class="row">
                     
                 </div>
