--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        
         <div id="forecast">
             <div class="container text-white mt-1 text-center  h-75">
-                <div id="forecastWeather" class="owl-carousel">
+                <div id="forecastWeather" class="owl-carousel owl-theme">
                     
                 </div>
             </div>
