--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
        
         <div id="forecast">
-            <div class="container text-white mt-1 text-center  h-75">
+            <div class="container body text-white mt-1 text-center  h-75">
                 <div id="forecastWeather" class="owl-carousel owl-theme">
                     
                 </div>
